infrastructure/storage/longhorn-ingress/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: longhorn-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://raw.githubusercontent.com/longhorn/website/master/static/img/icon-longhorn.svg"
    dashboard.zippelf.com/display-name: "Longhorn"
    dashboard.zippelf.com/docs: "https://longhorn.io/docs/latest/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-longhorn-ingress
  routes:
    - match: Host(`longhorn.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: longhorn-gatekeeper
          port: 3000
